# alarm2

./: .gitignore  CMakeLists.txt  flash
board/: AlarmInputs.kicad_pcb  AlarmInputs.pro  AlarmInputs.sch  fp-lib-table  sym-lib-table
board/footprints/: 8pinscrew.kicad_mod  RPi_Pico_SMD_TH.kicad_mod
board/symbols/: MCU_RaspberryPi_and_Boards.lib
src/: CMakeLists.txt  hapico.c  inputs.c  local.h  options.c  outputs.c  tusb_config.h  usb_descriptors.c
